tests/snapshots/integration_test__log_data@6c9f6f71f54b2b8dae53ffee24f4b0c9.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-user-role-change.log:1"
expression: result
info: "type=USER_ROLE_CHANGE msg=audit(1725003303.447:87595829): pid=3224193 uid=0 auid=4294967295 ses=4294967295 subj=system_u:system_r:init_t:s0 msg='op=pam_selinux default-context=unconfined_u:unconfined_r:unconfined_t:s0-s0:c0.c1023 selected-context=unconfined_u:unconfined_r:unconfined_t:s0-s0:c0.c1023 exe=\"/usr/lib/systemd/systemd\" hostname=? addr=? terminal=? res=success'\u001dUID=\"root\" AUID=\"unset\""
---
{
  "record_type": "USER_ROLE_CHANGE",
  "timestamp": 1725003303447,
  "id": 87595829,
  "fields": {
    "auid": null,
    "msg": {
      "addr": "?",
      "default-context": "unconfined_u:unconfined_r:unconfined_t:s0-s0:c0.c1023",
      "exe": "/usr/lib/systemd/systemd",
      "hostname": "?",
      "op": "pam_selinux",
      "res": "success",
      "selected-context": "unconfined_u:unconfined_r:unconfined_t:s0-s0:c0.c1023",
      "terminal": "?"
    },
    "pid": "3224193",
    "ses": "4294967295",
    "subj": {
      "level": {
        "sensitivity": "s0"
      },
      "module": "SELinux",
      "role": "system_r",
      "type": "init_t",
      "user": "system_u"
    },
    "uid": "root"
  },
  "enrichment": {
    "AUID": "unset",
    "UID": "root"
  }
}
