tests/snapshots/integration_test__log_data@6d47d1eea07695b13a80613344a7f84a.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/go-libaudit/audit-rhel7.log:23"
expression: result
info: "type=SOCKADDR msg=audit(1490816924.990:517643): saddr=100000000000000000000000"
---
{
  "record_type": "SOCKADDR",
  "timestamp": 1490816924990,
  "id": 517643,
  "fields": {
    "saddr": {
      "family": "AF_NETLINK",
      "multicast_groups_mask": 0,
      "port_id": 0
    }
  }
}
