tests/snapshots/integration_test__log_data@6d86f9460aec45b6352c10b2df638845.snap
---
source: tests/integration_test.rs
description: "/home/runner/work/auditd-parser/auditd-parser/tests/data/go-libaudit/audit-rhel7.log:14"
expression: result
info: "type=DAEMON_START msg=audit(1481076983.819:7798): auditd start, ver=2.4.1 format=raw kernel=3.10.0-327.36.3.el7.x86_64 auid=4294967295 pid=251 subj=system_u:system_r:auditd_t:s0 res=success"
---
{
  "Err": {
    "Parser": {
      "Parse": "error Char at:  start, ver=2.4.1 format=raw kernel=3.10.0-327.36.3.el7.x86_64 auid=4294967295 pid=251 subj=system_u:system_r:auditd_t:s0 res=success"
    }
  }
}
