tests/snapshots/integration_test__log_data@6fb9f7375df5dba5e690396c338ac159.snap
---
source: tests/integration_test.rs
expression: record
info: "type=SYSCALL msg=audit(1515619721.392:106081): arch=c000003e syscall=59 success=yes exit=0 a0=55df1048ec88 a1=55df1048ec38 a2=55df1048ec58 a3=1 items=2 ppid=27851 pid=27854 auid=4294967295 uid=0 gid=0 euid=0 suid=0 fsuid=0 egid=0 sgid=0 fsgid=0 tty=(none) ses=4294967295 comm=\"grep\" exe=\"/bin/grep\" key=65786563013634626974\""
---
{
  "record_type": "SYSCALL",
  "timestamp": 1515619721392,
  "id": 106081,
  "fields": {
    "a0": "55df1048ec88",
    "a1": "55df1048ec38",
    "a2": "55df1048ec58",
    "a3": "1",
    "arch": "c000003e",
    "auid": 4294967295,
    "comm": "grep",
    "egid": 0,
    "euid": 0,
    "exe": "/bin/grep",
    "exit": "0",
    "fsgid": 0,
    "fsuid": 0,
    "gid": 0,
    "items": "2",
    "key": "65786563013634626974\"",
    "pid": "27854",
    "ppid": "27851",
    "ses": "4294967295",
    "sgid": 0,
    "success": "yes",
    "suid": 0,
    "syscall": "59",
    "tty": "(none)",
    "uid": 0
  }
}
