tests/snapshots/integration_test__log_data@6ff181f29e7e0d0cacac1c128696c310.snap
---
source: tests/integration_test.rs
description: "/home/runner/work/auditd-parser/auditd-parser/tests/data/linux-audit-parser-rs/line-tty.log:1"
expression: result
info: "type=TTY msg=audit(1702500511.459:370948): tty pid=260398 uid=0 auid=4294967295 ses=4294967295 major=136 minor=1 comm=\"bash\" data=72706D202D7161207C2067726570207379736C6F670D\u001dUID=\"root\" AUID=\"unset\""
---
{
  "Err": {
    "Parser": {
      "Parse": "error Char at:  pid=260398 uid=0 auid=4294967295 ses=4294967295 major=136 minor=1 comm=\"bash\" data=72706D202D7161207C2067726570207379736C6F670D\u001dUID=\"root\" AUID=\"unset\""
    }
  }
}
