tests/snapshots/integration_test__log_data@7023579038b972be6a9de66c828aa702.snap
---
source: tests/integration_test.rs
description: "/home/jorge/github/auditd-parser/tests/data/linux-audit-parser-rs/line-path.log:1"
expression: result
info: "node=work type=PATH msg=audit(1614788539.386:13232): item=0 name=\"/usr/bin/whoami\" inode=261214 dev=ca:03 mode=0100755 ouid=0 ogid=0 rdev=00:00 nametype=NORMAL cap_fp=0000000000000000 cap_fi=0000000000000000 cap_fe=0 cap_fver=0"
---
{
  "record_type": "PATH",
  "timestamp": 1614788539386,
  "id": 13232,
  "node": "work",
  "fields": {
    "cap_fe": "0",
    "cap_fi": [],
    "cap_fp": [],
    "cap_fver": "0",
    "dev": "ca:03",
    "inode": "261214",
    "item": "0",
    "mode": {
      "attributes": [],
      "file_type": "regular-file",
      "group": [
        "read",
        "exec"
      ],
      "other": [
        "read",
        "exec"
      ],
      "user": [
        "read",
        "write",
        "exec"
      ]
    },
    "name": "/usr/bin/whoami",
    "nametype": "NORMAL",
    "ogid": "root",
    "ouid": "root",
    "rdev": "00:00"
  }
}
